# review-parser

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
src/review_parser/: cli.py  codex_report.py  exporters.py  models.py  utils.py
src/review_parser/yandex_maps/: __init__.py  scraper.py
